# TypedLinearAlgebra

./: .clang-tidy  1x1__array_8cpp.js  1x1__array_8cpp.xhtml  1x1__array_8cpp__incl.map  1x1__array_8cpp__incl.md5  1x1__array_8cpp_source.xhtml  1x1__eigen__unit_8cpp.js  1x1__eigen__unit_8cpp.xhtml  1x1__eigen__unit_8cpp__incl.map  1x1__eigen__unit_8cpp_source.xhtml  1x1__std__unit_8cpp.js  1x1__std__unit_8cpp.xhtml  1x1__std__unit_8cpp__incl.md5  1x1__std__unit_8cpp_source.xhtml  1x1__unit_8cpp.js  1x1__unit_8cpp.xhtml  1x1__unit_8cpp__incl.map  1x1__unit_8cpp__incl.md5  1x1__unit_8cpp_source.xhtml  1x1__unit__eigen__fail_8cpp.js  1x1__unit__eigen__fail_8cpp.xhtml  1x1__unit__eigen__fail_8cpp__incl.map  1x1__unit__eigen__fail_8cpp__incl.md5  1x1__unit__eigen__fail_8cpp_source.xhtml  1x2__unit_8cpp.js  1x2__unit_8cpp.xhtml  1x2__unit_8cpp__incl.map  1x2__unit_8cpp__incl.md5  1x2__unit_8cpp_source.xhtml  1x2__unit__eigen_8cpp.js  1x2__unit__eigen_8cpp.xhtml  1x2__unit__eigen_8cpp__incl.map  1x2__unit__eigen_8cpp__incl.md5  1x2__unit__eigen_8cpp_source.xhtml  1x2__unit__eigen__fail_8cpp.js  1x2__unit__eigen__fail_8cpp.xhtml  1x2__unit__eigen__fail_8cpp__incl.map  1x2__unit__eigen__fail_8cpp_source.xhtml  1x2__unit__std_8cpp.js  1x2__unit__std_8cpp.xhtml  (+1340 more)
.github/workflows/: citation.yml  clang_tidy.yml  codeql.yml  coverage.yml  coverage_comment.yml  cppcheck.yml  dependency_review.yml  deploy_coverage.yml  deploy_doxygen.yml  deploy_time_trace.yml  doxygen.yml  format.yml  memory_valgrind.yml  openssf_scorecard.yml  pipeline.yml  sanitizer.yml  valgrind_call.yml
benchmark/: CMakeLists.txt  README.md  eigen_product.cpp  eigen_product_typed.cpp  eigexed_product.cpp  matrix_product_mdspan.cpp  matrix_product_tuple.cpp  mdspan_product.cpp  mdspan_tuple_product.cpp  plot.cpp  typed_eigen_product.cpp  typed_mdspan_product.cpp  typed_mdspan_tupled_product.cpp
cmake/: CMakeLists.txt  fcarouge-typed-linear-algebra-config.cmake.in
coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/sample/: index-detail-sort-b.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  mp_units_eigen.cpp.func-c.html  mp_units_eigen.cpp.func.html  mp_units_eigen.cpp.gcov.html  mp_units_std.cpp.func-c.html  mp_units_std.cpp.func.html  mp_units_std.cpp.gcov.html
coverage/test/: addition.cpp.func-c.html  addition.cpp.func.html  addition.cpp.gcov.html  assign.cpp.func-c.html  assign.cpp.func.html  assign.cpp.gcov.html  at.cpp.func-c.html  at.cpp.func.html  at.cpp.gcov.html  at_1x1.cpp.func-c.html  at_1x1.cpp.func.html  at_1x1.cpp.gcov.html  at_1x1_const.cpp.func-c.html  at_1x1_const.cpp.func.html  at_1x1_const.cpp.gcov.html  at_1xn.cpp.func-c.html  at_1xn.cpp.func.html  at_1xn.cpp.gcov.html  at_1xn_const.cpp.func-c.html  at_1xn_const.cpp.func.html  at_1xn_const.cpp.gcov.html  at_mx1.cpp.func-c.html  at_mx1.cpp.func.html  at_mx1.cpp.gcov.html  at_mx1_const.cpp.func-c.html  at_mx1_const.cpp.func.html  at_mx1_const.cpp.gcov.html  at_mxn.cpp.func-c.html  at_mxn.cpp.func.html  at_mxn.cpp.gcov.html  at_mxn_const.cpp.func-c.html  at_mxn_const.cpp.func.html  at_mxn_const.cpp.gcov.html  constructor_1x1.cpp.func-c.html  constructor_1x1.cpp.func.html  constructor_1x1.cpp.gcov.html  constructor_1x1_array.cpp.func-c.html  constructor_1x1_array.cpp.func.html  constructor_1x1_array.cpp.gcov.html  constructor_1xn.cpp.func-c.html  (+139 more)
documentation/: Doxyfile  documentation.dox
documentation/paper/: mp_units_eigen.md
include/: CMakeLists.txt
include/fcarouge/: typed_linear_algebra.hpp  typed_linear_algebra_forward.hpp
paper/: mp_units_eigen.md
pkgconfig/: CMakeLists.txt
sample/: CMakeLists.txt  mp_units_eigen.cpp  mp_units_eigen.md  mp_units_eigen2.cpp  mp_units_std.cpp  mp_units_tuple.cpp  mp_units_tuple_std_draft.cpp  std_linalg_xyz.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  concepts_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  (+64 more)
support/: CMakeLists.txt  support.cmake
support/eigen/: CMakeLists.txt
support/eigexed/: CMakeLists.txt
support/kokkos/: CMakeLists.txt
support/kokkos/fcarouge/: linalg  mdspan
support/main/: CMakeLists.txt  main.cpp
support/mp_units/: CMakeLists.txt
support/nested_typed_eigen/: CMakeLists.txt
support/quantity/: CMakeLists.txt
support/quantity_eigen/: CMakeLists.txt
support/quantity_std/: CMakeLists.txt
support/std_linalg/: CMakeLists.txt
support/unit/: CMakeLists.txt
support/unit_eigen/: CMakeLists.txt
support/unit_std/: CMakeLists.txt
test/: CMakeLists.txt  addition.cpp  at.cpp  at_1x1.cpp  at_1x1_const.cpp  at_1xn.cpp  at_1xn_const.cpp  at_mx1.cpp  at_mx1_const.cpp  at_mxn.cpp  at_mxn_const.cpp  constructor_1x1.cpp  constructor_1x1_array.cpp  constructor_1x1_unit.cpp  constructor_1xn.cpp  constructor_1xn_array.cpp  constructor_copy.cpp  constructor_nx1.cpp  constructor_nx1_array.cpp  copiable.cpp  copy.cpp  element_1x1.cpp  element_mxn.cpp  format_1x1.cpp  format_1xn.cpp  identity.cpp  multiplication_arithmetic.cpp  multiplication_rxc.cpp  multiplication_sxc.cpp  nested.cpp  operator_call_1x1.cpp  operator_call_1x1_const.cpp  operator_call_1xn.cpp  operator_call_1xn_const.cpp  operator_call_mx1.cpp  operator_call_mx1_const.cpp  operator_call_mxn.cpp  operator_call_mxn_const.cpp  operator_subscript_1x1.cpp  operator_subscript_1x1_const.cpp  (+16 more)
test/addition/: 1x1_unit_eigen.cpp  1x1_unit_eigen_fail.cpp  1x1_unit_std.cpp  1x2_eigen.cpp  1x2_unit.cpp  1x2_unit_eigen.cpp  1x2_unit_eigen_fail.cpp  1x2_unit_std.cpp  CMakeLists.txt  addition.cpp
test/assign/: CMakeLists.txt  assign.cpp
test/at/: 1x1.cpp  1xn.cpp  (+10 more)
typed_linear_algebra/: README.md  index.html  typed_linear_algebra.md
(+1038 files in other folders)
